added deletion logic for removing associated appointments on customer deletion. Updated JavaDocs. Updated README.md